--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@ Error message and password prompt
 
 <li>idea</li>
 
+<li>Nikolai Serbanov</li>
+
 <li>Watching the sunshine</li>
 
 <li>Welcome!</li>
@@ -8857,7 +8859,7 @@ Error message and password prompt
 <div created="20170824110919905" modified="20170824110920436" title="$:/state/toc/DM-idea-1999074941">
 <pre>close</pre>
 </div>
-<div list="[[DM Session Notes]] Welcome!" title="$:/StoryList">
+<div list="[[Nikolai Serbanov]] Welcome!" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8873,7 +8875,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///D:/Recovery_USB/George/Projects/DnD%20Projects/Cyberpunk%202097/Wiki/Cyberpunk2097Wiki/index.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/Arbiter/Desktop/Cyberpunk2097Wiki/index.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8893,7 +8895,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/D:/Recovery_USB/George/Projects/DnD%20Projects/Cyberpunk%202097/Wiki/Cyberpunk2097Wiki/index.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/Arbiter/Desktop/Cyberpunk2097Wiki/index.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -8901,7 +8903,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;null&quot;
+            &quot;text&quot;: &quot;file://&quot;
         }
     }
 }</pre>
@@ -9344,8 +9346,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div author="JeremyRuston" core-version="&gt;=5.0.0" created="20170825103656741" dependents="" description="Basic theme" modified="20170825103656741" name="Vanilla" original-plugin-type="theme" original-tags="" original-title="$:/themes/tiddlywiki/vanilla" original-type="application/json" server-url="http://tiddlywiki.com/library/v5.1.14/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/http://tiddlywiki.com/library/v5.1.14/index.html/$:/themes/tiddlywiki/vanilla" type="text/vnd.tiddlywiki" version="5.1.14">
 <pre></pre>
 </div>
-<div created="20170702114306764" modified="20170824111050035" title="$:/temp/search">
-<pre></pre>
+<div created="20170702114306764" modified="20170929231526761" title="$:/temp/search">
+<pre>heavy</pre>
 </div>
 <div created="20170825103656674" modified="20170825103656674" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.14/index.html" url="http://tiddlywiki.com/library/v5.1.14/index.html">
 <pre>loaded</pre>
@@ -9516,6 +9518,9 @@ Augustus will also want them with him, so he will tell them that he has planned 
 <pre></pre>
 </div>
 <div created="20170702140029731" modified="20170824111035486" tags="Contents" title="idea">
+<pre></pre>
+</div>
+<div created="20170929231407319" modified="20170929232420417" tags="human player [[ex convict]] [[ex marine]] heavy" title="Nikolai Serbanov">
 <pre></pre>
 </div>
 <div created="20170702135347105" modified="20170824111040721" tags="idea" title="Watching the sunshine">
